<resources>
    <string name="app_package" translatable="false">com.fexed.charactersheet</string>
    <string name="app_name">The Character Vault</string>
    <string name="summary">Summary</string>
    <string name="skills">Skills</string>
    <string name="notes">Notes</string>
    <string name="desc">Description</string>
    <string name="setmacro">Set roll macro</string>
    <string name="newattack">New attack</string>
    <string name="newspell">New spell</string>
    <string name="newmacro">New macro</string>
    <string name="newatk">New damage roll</string>
    <string name="carriedweight">Carried weight</string>
    <string name="maxweight">Max weight</string>
    <string name="equipped">Equipped</string>
    <string name="razza">Race</string>
    <string name="none">None</string>
    <string name="str">STR</string>
    <string name="cos">CON</string>
    <string name="car">CHA</string>
    <string name="dex">DEX</string>
    <string name="inte">INT</string>
    <string name="sag">WIS</string>
    <string name="newitem">New item</string>
    <string name="weight">Weight</string>
    <string name="quantity">Quantity</string>
    <string name="selectrace">Select the race</string>
    <string name="selectclass">Select the class</string>
    <string name="selectbonuses">Select the bonuses</string>
    <string name="selectproficiency">Select the skill proficiency (Remaining: %s)</string>
    <string name="forza">Strength</string>
    <string name="costituzione">Constitution</string>
    <string name="carisma">Charisma</string>
    <string name="destrezza">Dexterity</string>
    <string name="intelligenza">Intelligence</string>
    <string name="saggezza">Wisdom</string>
    <string name="newvalue">Enter the new value for %s</string>
    <string name="classe_armatura">Armor Class</string>
    <string name="punti_ferita">Hit Points</string>
    <string name="pf_massimi">Max HP</string>
    <string name="pazzia">Madness</string>
    <string name="affaticamento">Fatigue</string>
    <string name="abilit_e_talenti">Abilities</string>
    <string name="attacchi_e_incantesimi">Attacks and spellcasting</string>
    <string name="attacchi">Attacks</string>
    <string name="inventario">Inventory</string>
    <string name="background_e_note">Background and notes</string>
    <string name="tiri_salvezza">Saving Throws</string>
    <string name="tiro_salvezza">Saving Throw</string>
    <string name="lingue">Languages</string>
    <string name="competenze">Proficiencies</string>
    <string name="talenti">Class Features</string>
    <string name="abilit_di_classe_e_razza">Racial Traits</string>
    <string name="abilit">Skills</string>
    <string name="atletica">Athletics</string>
    <string name="acrobazia">Acrobatics</string>
    <string name="furtivit">Stealth</string>
    <string name="rapidit_di_mano">Sleight of Hand</string>
    <string name="investigare">Investigation</string>
    <string name="arcano">Arcana</string>
    <string name="storia">History</string>
    <string name="religione_e_folklore">Religion</string>
    <string name="natura">Nature</string>
    <string name="sopravvivenza">Survival</string>
    <string name="medicina">Medicine</string>
    <string name="percezione">Perception</string>
    <string name="intuizione">Insight</string>
    <string name="intimidire">Intimidation</string>
    <string name="ingannare">Deception</string>
    <string name="intrattenere">Performance</string>
    <string name="persuadere">Persuasion</string>
    <string name="animali">Animal Handling</string>
    <string name="incantesimi">Spells</string>
    <string name="statistica_rilevante">Ability</string>
    <string name="per_colpire">Attack bonus</string>
    <string name="spellatk">Spell attack</string>
    <string name="cd">Save DC</string>
    <string name="mana_punti">Sorcery/Ki Points</string>
    <string name="app_spell">Spells App</string>
    <string name="trucchetti">Cantrips</string>
    <string name="aggiungi">Add</string>
    <string name="livello_1">Level 1</string>
    <string name="livello_2">Level 2</string>
    <string name="livello_3">Level 3</string>
    <string name="livello_4">Level 4</string>
    <string name="livello_5">Level 5</string>
    <string name="livello_6">Level 6</string>
    <string name="livello_7">Level 7</string>
    <string name="livello_8">Level 8</string>
    <string name="livello_9">Level 9</string>
    <string name="livello">Level +</string>
    <string name="attacchi_corpo_a_corpo">Melee attacks</string>
    <string name="attacchi_a_distanza">Ranged attacks</string>
    <string name="soldi">Treasure</string>
    <string name="meleenameplaceholder" translatable="false">Steel Longsword</string>
    <string name="meleedamageplaceholder" translatable="false">1D12 Slashing</string>
    <string name="ok">OK</string>
    <string name="rimuovi">Remove</string>
    <string name="nome">Name</string>
    <string name="inseriscidatinuovo">Enter your character\'s details</string>
    <string name="nome_e_cognome">Full name</string>
    <string name="classi_e_livelli">Classes and levels</string>
    <string name="livello_totale">Level</string>
    <string name="rangednameplaceholder" translatable="false">Longbow</string>
    <string name="rangedrangeplaceholder" translatable="false">100 ft.</string>
    <string name="rangeddamageplaceholder" translatable="false">1D8 Piercing</string>
    <string name="errorattackname">Attack\'s name cannot be empty</string>
    <string name="errorattackdmg">Attack\'s damage cannot be empty</string>
    <string name="errorattackrng">Attack\'s range cannot be empty</string>
    <string name="selectspellstat">Select your spellcasting ability</string>
    <string name="annulla">Cancel</string>
    <string name="insertlevelof">Enter the level of </string>
    <string name="insertnewnameof">Enter the new name of </string>
    <string name="insertmaxpoints">Enter max points</string>
    <string name="insertmaxslots">Enter max slots</string>
    <string name="insertnewclass">Update classes and levels of %s</string>
    <string name="insertnewrace">Change the race of %s</string>
    <string name="insertca">Enter AC</string>
    <string name="insertpf">Enter HP</string>
    <string name="insertmaxpf">Enter max HP</string>
    <string name="enterdamage">Enter how many HP you lost</string>
    <string name="entercure">Enter how many HP you gained</string>
    <string name="insertpferror">Current HP cannot be greater than max HP</string>
    <string name="insert">Enter </string>
    <string name="name">Name</string>
    <string name="range">Range</string>
    <string name="bonusdex">DEX</string>
    <string name="bonusfor">STR</string>
    <string name="damage">Damage</string>
    <string name="settings">Settings</string>
    <string name="pgnameerror">Character\'s name cannot be empty</string>
    <string name="pgraceerror">Character\'s race cannot be empty</string>
    <string name="pgclasserror">Character\'s class cannot be empty</string>
    <string name="pglverror">Character\'s level cannot be empty</string>
    <string name="dice">Dice</string>
    <string name="coin">Coin</string>
    <string name="dicerollhintchoose">Choose a dice!</string>
    <string name="dialogpropictitle">Update %s\'s image</string>
    <string name="dialogpropicselect">New image</string>
    <string name="dialogpropicclear">Clear image</string>
    <string name="spendtitle">Insert your treasure variations</string>
    <string name="roll">Roll</string>
    <string name="newroll">New dice roll</string>
    <string name="testa">Heads</string>
    <string name="croce">Tails</string>
    <string name="rame">Copper</string>
    <string name="argento">Silver</string>
    <string name="oro">Gold</string>
    <string name="platino">Platinum</string>
    <string name="insertxpof">Enter the experience points of</string>
    <string name="addxpof">Enter how many experience points you gained or lost (negative numbers)</string>
    <string name="keeppressedtoedit">Long tap to edit</string>
    <string name="addobjtoinv">Add an item to the inventory</string>
    <string name="scrollformore" translatable="false">Scroll for more →</string>
    <string name="comp">Prof.</string>
    <string name="exp">Exp.</string>
    <string name="bonus">Bonus</string>
    <string name="skill">Skill</string>
    <string name="mo">gp</string>
    <string name="total">Total</string>
    <string name="pgsgoldpieces" translatable="false">Editing %1$s\'s gold coins</string>
    <string name="pgsplatpieces" translatable="false">Editing %1$s\'s platinum coins</string>
    <string name="pgssilvpieces" translatable="false">Editing %1$s\'s silver coins</string>
    <string name="pgscopppieces" translatable="false">Editing %1$s\'s copper coins</string>
    <string name="pgcharsheet" translatable="false">%1$s\'s character sheet</string>
    <string name="howmanydice" translatable="false">How many D%1$ds to roll?</string>
    <string name="newweapon">New weapon</string>
    <string name="resettxt">Reset all the data</string>
    <string name="resetconfirm">Are you sure you want to reset all the data? You will lose your character.</string>
    <string name="areusure">Are you sure?</string>
    <string name="ratepls">Do you like the app? Leave an opinion on the Play Store!</string>
    <string name="edit">Edit</string>
    <string name="editdesc">Edit description</string>
    <string name="try_diceroller">Try the dice roller!</string>
    <string name="rateplslink" translatable="false">https://play.google.com/store/apps/details?id=com.fexed.charactersheet</string>
    <string name="sleep">Rest</string>
    <string name="resttxt">Rest! Spell slots and health have been restored!</string>
    <string name="cast">Cast spell</string>
    <string name="fileopenerror" translatable="false">An error occurred while opening file</string>
    <string name="selectpg">Select a character</string>
    <string name="newpg">New character</string>
    <string name="charselect">Select character</string>
    <string name="migratemsg">Migrating character</string>
    <string name="delpg">Remove character</string>
    <string name="pgdeleteok">Character successfully deleted</string>
    <string name="deleteconfirm">Are you sure?</string>
    <string name="delconfirmpg">Are you sure you want to delete %s?</string>
    <string name="casted">A %s spell has been casted!</string>
    <string name="noslots">No more %s slots left!</string>
    <string name="export">Export character</string>
    <string name="exporting">Exporting…</string>
    <string name="exportingchar">Exporting %s…</string>
    <string name="exportsuccess">Character exported successfully</string>
    <string name="keeptoremove">Long tap to remove</string>
    <string name="naturaldice">Natural %s!</string>
    <string name="loadchar">Load</string>
    <string name="newlevel">Obtained level %s!</string>
    <string name="set_loadlastchar">Load last character on startup</string>
    <string name="set_5expthresholds" translatable="false">Use the DnD 5e experience tresholds</string>
    <string name="numbererror">Invalid number!</string>
    <string name="atk">Attack</string>
    <string name="atklbl" translatable="false">%s attack with proficiency (1D20 + %s + %s)</string>
    <string name="melee">Melee</string>
    <string name="ranged">Ranged</string>
    <string name="stats">Stats</string>
    <string name="stat">Stat</string>
    <string name="dicethrown">Dice thrown</string>
    <string name="dmgrec">%s damage received</string>
    <string name="shortrest">Short rest</string>
    <string name="changelog">V 1.0! New life!</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="advantage">Advantage</string>
    <string name="disadvantage">Disadvantage</string>
</resources>