<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_summary"
        android:icon="@drawable/summary"
        android:title="@string/summary" />

    <item
        android:id="@+id/navigation_skills"
        android:icon="@drawable/checked_w"
        android:title="@string/abilit" />

    <item
        android:id="@+id/navigation_attacks"
        android:icon="@drawable/sword"
        android:title="@string/attacchi" />
    <item
        android:id="@+id/navigation_spells"
        android:icon="@drawable/spell"
        android:title="@string/incantesimi" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/inventory"
        android:title="@string/inventario" />

</menu>