<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/itemlistbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/itemname_input"
        app:layout_constraintStart_toEndOf="@+id/itemname_input"
        app:layout_constraintTop_toTopOf="@+id/itemname_input"
        app:srcCompat="@drawable/listicon" />

    <EditText
        android:id="@+id/itembonus_n"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="1"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/newitemtitle3"
        app:layout_constraintTop_toBottomOf="@+id/newitemtitle2" />

    <EditText
        android:id="@+id/itemname_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newitemtitle" />

    <EditText
        android:id="@+id/itemdesc_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/desc"
        android:inputType="textMultiLine|text"
        android:maxLines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemname_input" />

    <EditText
        android:id="@+id/itemweight_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="1.0"
        android:inputType="number|numberDecimal"
        android:text="0.0"
        app:layout_constraintEnd_toEndOf="@+id/itemdesc_input"
        app:layout_constraintStart_toEndOf="@+id/newitemtitle4"
        app:layout_constraintTop_toBottomOf="@+id/itemdesc_input" />

    <EditText
        android:id="@+id/itemquantity_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="1"
        android:inputType="number"
        android:text="1"
        app:layout_constraintEnd_toEndOf="@+id/itemdesc_input"
        app:layout_constraintStart_toEndOf="@+id/newitemtitle5"
        app:layout_constraintTop_toBottomOf="@+id/itemweight_input" />

    <TextView
        android:id="@+id/newitemtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newitem"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newitemtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bonus"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemquantity_input" />

    <TextView
        android:id="@+id/newitemtitle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/weight"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="@+id/itemweight_input"
        app:layout_constraintStart_toStartOf="@+id/itemdesc_input"
        app:layout_constraintTop_toTopOf="@+id/itemweight_input" />

    <TextView
        android:id="@+id/newitemtitle5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="@+id/itemquantity_input"
        app:layout_constraintStart_toStartOf="@+id/itemdesc_input"
        app:layout_constraintTop_toTopOf="@+id/itemquantity_input" />

    <TextView
        android:id="@+id/newitemtitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="+"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/newitem_bonus"
        app:layout_constraintStart_toEndOf="@+id/newitem_bonus"
        app:layout_constraintTop_toTopOf="@+id/newitem_bonus" />

    <Spinner
        android:id="@+id/newitem_bonus"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:entries="@array/selectablebonuses"
        app:layout_constraintBottom_toBottomOf="@+id/itembonus_n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itembonus_n" />

    <Button
        android:id="@+id/newitem_ok"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newitem_bonus" />
</androidx.constraintlayout.widget.ConstraintLayout>